# defacer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
defacer/: CLAUDE.md  __init__.py  __main__.py  annotation.py  cli.py  config.py  model_loader.py  models.py
defacer/anonymization/: __init__.py  base.py  blur.py  mosaic.py
defacer/detection/: __init__.py  base.py  retinaface.py  yolo11_face.py  yolov8_face.py
defacer/gui/: CLAUDE.md  annotation.py  app.py  detection_dialog.py  export_dialog.py  frame_range_selector.py  retrack_dialog.py  styles.py  thumbnail_cache.py  timeline.py  track_editor.py  utils.py  video_player.py  worker_dialog.py
defacer/pipeline/: CLAUDE.md  __init__.py  processor.py
defacer/tracking/: CLAUDE.md  __init__.py  base.py  interpolation.py  merge_suggestion.py  sort_tracker.py  ultralytics_tracker.py
defacer/video/: __init__.py  reader.py  writer.py
models/: .gitkeep
scripts/: CLAUDE.md  install.sh  run_with_rocm.sh
tests/: CLAUDE.md  __init__.py  test_annotation.py
