[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defacer"
version = "0.4.3"
description = "動画内の顔を自動検知してモザイク処理を行うソフトウェア"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kotaro Yoshimoto"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
keywords = ["face detection", "video processing", "anonymization", "mosaic", "privacy"]

dependencies = [
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.2",
    "tqdm>=4.65.0",
    "ultralytics>=8.0.0",
    "huggingface-hub>=0.20.0",
    "deep-sort-realtime>=1.3.2",
]

[project.optional-dependencies]
export = [
    "ffmpeg-python>=0.2.0",
]
all = [
    "ffmpeg-python>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
defacer = "defacer.cli:main"

[project.gui-scripts]
defacer-gui = "defacer.gui.app:main"

[project.urls]
Homepage = "https://github.com/kotaroyoshimoto/defacer"
Repository = "https://github.com/kotaroyoshimoto/defacer"

[tool.hatch.build.targets.wheel]
packages = ["defacer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt5"
